--- a/example1/exam1.css
+++ b/example1/exam1.css
@@ -1,6 +1,5 @@
-section {
-    max-width: 1024px;
-    margin: 0 auto;
+.number-wrap {
+    margin:0 5px;
 }
 .btn-wrap {
     overflow:  hidden;
@@ -21,5 +20,6 @@ section {
     line-height: 32px;
     background: #000;
     color: #fff;
-    margin: 10px 0;
+    margin: 5px 0;
+    text-indent: 10px;
 }
