--- a/common.css
+++ b/common.css
@@ -22,3 +22,15 @@ ul li a:hover{
     color:#fff;
     background: #333;
 }
+.footer {
+    display: flex;
+    justify-content: center;
+}
+button {
+    border:3px solid #333;
+    color:#333;
+    border-radius: 10px;
+    padding:10px;
+    font-weight: bold;
+    margin:0 10px;
+}
