--- a/example1/exam1.css
+++ b/example1/exam1.css
@@ -1,7 +1,7 @@
 .btn-wrap {
     overflow:  hidden;
     display: flex;
-    justify-content: flex-end;
+    justify-content:center;
 }
 .btn-wrap > button {
     background: #acacac;
